# kafka-example

./: .gitignore  Makefile  docker-compose.yml  main.py  pyproject.toml
app/: _main.py
nchan/: Dockerfile  default.conf
parsing/: __main__.py  _main.py  parser.py
parsing/parsers/: example1.py  example2.py
